--- a/css/products.css
+++ b/css/products.css
@@ -362,7 +362,7 @@ header a {
     margin-right: auto;
 }
 .footer{
-    background-color: whitesmoke;
+    background-color: #ededed;
 }
 .faq{
     margin: 0 auto;
