--- a/css/item.css
+++ b/css/item.css
@@ -487,7 +487,7 @@ header a {
     margin-right: auto;
 }
 .footer{
-    background-color: whitesmoke;
+    background-color: #ededed;
 }
 .faq{
     margin: 0 auto;
