--- a/css/about.css
+++ b/css/about.css
@@ -67,10 +67,10 @@ header a {
     padding-top: 10px;
     color: black;
     z-index: 1000000;
-    background-color: whitesmoke;
+    background-color: #ededed;
 }
 .white {
-    height: 220px;
+    height: 112px;
     width: 100%;
 }
 
@@ -104,12 +104,18 @@ header a {
     display: flex;
     margin: 0;
 }
+.basket{
+    position: absolute;
+    bottom: 15px;
+    margin-left: 20px;
+    width: 30px;
+    height: 30px;
+}
 #top{
     margin-top: -112px;
     top: 0;
     left: 0;
 }
-
 
 /*---------menu---------*/
 
@@ -152,7 +158,7 @@ header a {
     width: 30px;
     height: 30px;
     margin-right: auto;
-    margin-left: 2px;
+    margin-left: 5px;
     border-radius: 20px;
 }
 .socials li{
@@ -192,11 +198,148 @@ header a {
     z-index: 1000;
 }
 
+.num{
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    background-color: black;
+    color: white;
+    border-radius: 3030px;
+    right: 0;
+    top: 0;
+}
+.all-bask{
+    position: relative;
+    width: 60px;
+    height: 55px;
+}
+.bask-cou {
+    line-height: 20px;
+    text-align: center;
+}
+.all{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    background: #ededed;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    z-index: 9999999;
+    text-align: center;
+}
+
+
+@font-face {
+    font-family: 'gothic';
+    src: url('../fonts/Sketch.ttf');
+url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
+    font-style: normal;
+}
+:root {
+    --effect: hover .8s linear infinite;
+}
+
+
+
+
+.all p {
+    display: inline-block;
+    text-align: center;
+    font-size: 150px;
+    font-family: 'gothic', serif;
+    font-weight: normal;
+    transform: scale(.5);
+    color: #121212;
+    -webkit-text-stroke: 2px gray;
+}
+
+.all  p:nth-child(1) {
+    animation: var(--effect) .25s;
+}
+
+.all p:nth-child(2) {
+    animation: var(--effect) .25s;
+}
+
+.all  p:nth-child(3) {
+    animation: var(--effect) .25s;
+}
+
+.all p:nth-child(4) {
+    animation: var(--effect) .25s;
+}
+
+.all p:nth-child(5) {
+    animation: var(--effect) .25s;
+}
+
+.all p:nth-child(6) {
+    animation: var(--effect) .25s;
+}
+
+.all p:nth-child(7) {
+    animation: var(--effect) .25s;
+}
+.all p:nth-child(8) {
+    animation: var(--effect) .25s;
+}
+.all p:nth-child(9) {
+    animation: var(--effect) .25s;
+}
+.all p:nth-child(10) {
+    animation: var(--effect) .25s;
+}
+
+.all p:nth-child(11) {
+    animation: var(--effect) .25s;
+}
+
+.all p:nth-child(12) {
+    animation: var(--effect) .25s;
+}
+.all p:nth-child(13) {
+    animation: var(--effect) .25s;
+}
+.all p:nth-child(14) {
+    animation: var(--effect) .25s;
+}
+
+@keyframes hover {
+    0% {
+        transform: scale(.5);
+        color: #121212;
+        -webkit-text-stroke: 2px gray;
+    }
+
+    20% {
+        transform: scale(1);
+        color: black;
+        -webkit-text-stroke: 3px black;
+        filter: drop-shadow(0 0 1px white)drop-shadow(0 0 1px white)drop-shadow(0 0 3px black)drop-shadow(0 0 5px black)hue-rotate(10turn);
+    }
+
+    50% {
+        transform: scale(.5);
+        color: #121212;
+        -webkit-text-stroke: 2px gray;
+    }
+
+
+}
+
 /*---------------main---------------*/
+
 .title{
+    /*margin-top: 100vh;*/
+    margin-bottom: 50px;
     width: 100%;
     height: 100px;
-    background-color: #ededed;
+    background-color: #e1e1e1;
 }
 .title h1{
     text-transform: uppercase; /*temporary*/
@@ -207,60 +350,20 @@ header a {
 .row {
     display: flex;
     margin-bottom: 10px;
-    margin-top: 10px;
-}
-.col-3, .col-2, .col-1  {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    flex: 0 0 33.3333%;
-    display: inline-block;
-    align-items: center;
-}
-.col-1 img, .col-2 img, .col-3 img{
-    margin-bottom: 10px;
-    overflow:hidden;
-    -moz-transition: all 0.5s ease-out;
-    -o-transition: all 0.5s ease-out;
-    -webkit-transition: all 0.5s ease-out;
-}
-.col-1 img:hover, .col-2 img:hover, .col-3 img:hover{
-    -webkit-transform: scale(1.07);
-    -moz-transform: scale(1.07);
-    -o-transform: scale(1.07);
-}
-.item {
-    display: block;
-    max-width: 100%;
-    margin: 0 auto;
-}
-.name{
-    margin-top: 15px;
-}
-.name, .price-new {
-    display: block;
-    text-align: center;
 
 }
-
-
-
-.description {
+.col4{
     display: flex;
-    justify-content: space-between;
+    flex: 0 0 34%;
 }
-.description p {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    text-align: justify;
-    line-height: 1.62em;
+.col6{
+    display: flex;
+    flex: 0 0 66%;
 }
-.desc-left, .desc-right {
-    margin-top: 30px;
-    width: 567px;
+.col6 p{
+    padding-top: 10px;
+    font-size: 18px;
 }
-/*.desc-left h2, .desc-right h2{*/
-/*    */
-/*}*/
 /*------------footer------------*/
 
 .footer-text li a{
@@ -284,7 +387,7 @@ header a {
     margin-right: auto;
 }
 .footer{
-    background-color: whitesmoke;
+    background-color: #ededed;
 }
 .faq{
     margin: 0 auto;
@@ -328,9 +431,6 @@ header a {
     opacity: 1;
 }
 
-
-/*------------media------------*/
-
 /*------------media------------*/
 
 @media screen and (max-width: 1200px) {
@@ -345,12 +445,6 @@ header a {
 @media screen and (max-width: 1199px) {
     .container {
         width: 960px;
-    }
-    .container-main{
-        width: 940px;
-    }
-    .item{
-        width: 75%;
     }
     .desc-left, .desc-right {
         width: 48%;
@@ -373,34 +467,8 @@ header a {
     .container {
         width: 720px;
     }
-    .container-main{
-        width: 767px;
-    }
-    .white {
-        height: 195px;
-    }
     .menu li a{
-        font-size: 19px;
-    }
-    .r{
-        margin-left: 100px;
-    }
-    .item{
-        width: 95%;
-    }
-
-    .img-ul{
-        margin-right: 10px;
-    }
-    .s-img {
-        height: 85px;
-        width: 85px;
-    }
-    .text-description {
-        width: 90%;
-    }
-    .size-grid img{
-        width: 90%;
+        font-size: 18px;
     }
     .logo{
         width: 56px;
@@ -413,11 +481,6 @@ header a {
     .banner{
         margin-top: 90px;
     }
-    .col{
-        flex-direction: column;
-        justify-content: center;
-        width: 40%;
-    }
 }
 
 @media screen and (max-width: 767px) {
@@ -428,41 +491,11 @@ header a {
         padding-top: 3px;
         height: 75px;
     }
-    .col{
-        width: 90%;
-    }
-    .image{
-        width: 100%;
-    }
-    .item{
-        width: 90%;
-        margin-left: 10px;
-    }
-    .r{
-        margin-left: 30px;
-        margin-right: 30px;
-    }
-    .link-s-img img{
-        height: 130px;
-        width: 130px;
-    }
-    .ordering button{
-        width: 100%;
-    }
-    .white {
-        height: 186px;
-    }
-    .ordering {
-        width: 100%;
-    }
     .banner{
         margin-top: 72px;
     }
     .container {
         width: 540px;
-    }
-    .container-main{
-        width: 95%;
     }
     .lil{
         display: none;
@@ -540,26 +573,11 @@ header a {
     .show-lil{
         display: flex;
     }
-    .telegram-btn button{
-        width: 100%;
-    }
-    .bask-img{
-        margin: 0;
-    }
-    .total{
-        margin-left: 5px;
-    }
-    /*button{*/
-    /*	padding: 0;*/
-    /*	left: 0;*/
-    /*	bottom: 0;*/
-    /*	margin-left: auto;*/
-    /*	right: 0;*/
-    /*	float: left;*/
-    /*	margin-top: 15px;*/
-    /*}*/
     .shipping{
         text-align: left;
+    }
+    .all-bask{
+        margin-right: 470px;
     }
 }
 
@@ -567,28 +585,10 @@ header a {
     body{
         overflow-x:hidden;
     }
-    .image{
-        width: 100%;
-    }
 
-    .item{
-        width: 70%;
-        height: 70%;
-        margin-left: 10px;
-    }
-    .link-s-img img {
-        width: 100px;
-        height: 100px;
-    }
-    .r{
-        margin-left: 30px;
-    }
     .container {
         width: 100%;
-        padding: 0 15px;
-    }
-    .container-main{
-        width: 95%;
+        padding: 0;
     }
     .offer h1 {
         font-size: 80px;
@@ -640,45 +640,10 @@ header a {
     .shipping{
         display: none;
     }
-    .count{
-        display: flex;
-        flex-direction: row;
-        text-align: center;
-        margin: auto 15px;
+    .title h1{
+        font-size: 34px;
     }
-    .plus, .minus{
-        transition: none;
-        border: none;
-        width: 35px;
-        height: 30px;
-        border-radius: 90px;
-        background: black;
-        color: white;
-        font-size: 20px;
-    }
-    .counter{
-        width: 25px;
-        margin: auto 0;
-        padding: 0 10px 0 7px;
-    }
-    .img-title{
-        flex-direction: column;
-    }
-    .desc{
-        margin-left: 10px;
-    }
-}
-@media screen and (max-width: 425px) {
-    .image{
-        width: 100%;
-    }
-    .item{
-        width: 70%;
-        height: 70%;
-        margin-left: 10px;
-    }
-    .link-s-img img {
-        width: 70px;
-        height: 70px;
+    .all-bask{
+        margin-right: 80px;
     }
 }
