--- a/css/about.css
+++ b/css/about.css
@@ -335,7 +335,7 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
 /*---------------main---------------*/
 
 .title{
-    /*margin-top: 100vh;*/
+    margin-top: 0;
     margin-bottom: 50px;
     width: 100%;
     height: 100px;
@@ -481,6 +481,9 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
     .banner{
         margin-top: 90px;
     }
+    .white{
+        height: 100px;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -488,8 +491,7 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
         overflow-x:hidden;
     }
     .header{
-        padding-top: 3px;
-        height: 75px;
+        padding-top: 10px;
     }
     .banner{
         margin-top: 72px;
@@ -642,8 +644,32 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
     }
     .title h1{
         font-size: 34px;
+        padding-top: 34px;
     }
     .all-bask{
         margin-right: 80px;
     }
+}
+.roww {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.columnn {
+    margin-top: 75px;
+    -ms-flex: 50%; /* IE10 */
+    flex: 50%;
+    max-width: 50%;
+    padding: 0 4px;
+}
+
+.columnn img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+
 }
