--- a/css/item.css
+++ b/css/item.css
@@ -1,61 +1,83 @@
 @font-face {
     font-family: 'gothic';
     src: url('../fonts/Sketch.ttf');
-url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
+    url('../fonts/Sketch.ttf') format('truetype'),
+    font-weight: normal;
     font-style: normal;
 }
+
+
 /*-------------default-------------*/
+
 body {
     padding: 0;
     margin: 0;
     font-family: 'Raleway', sans-serif;
     color: black;
     font-size: 16px;
-
 }
+
 * {
     box-sizing: border-box;
 }
+
 button:focus {
     outline: none
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     padding: 0;
     margin: 0;
 }
+
 h2 {
     font-family: "Trebuchet MS", serif;
     font-size: 50px;
     margin-bottom: 58px;
 }
+
 h3 {
     font-size: 25px;
     margin-bottom: 28px;
 }
+
 a {
     text-decoration: none;
     color: black;
 }
+
 p {
     margin: 0;
 }
-ul, li {
+
+ul,
+li {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
-footer a{
+
+footer a {
     color: black;
 }
+
 header a {
     color: black;
 }
+
+
 /*---------------------------------*/
 
 .container {
     width: 1170px;
     margin: 0 auto;
 }
+
 
 /*-------------header-------------*/
 
@@ -70,8 +92,9 @@ header a {
     z-index: 1000000;
     background-color: #ededed;
 }
+
 .white {
-    height: 220px;
+    height: 226px;
     width: 100%;
 }
 
@@ -84,7 +107,6 @@ header a {
     width: 100%;
     padding: 40px 20px 20px 40px;
     z-index: 1000;
-
 }
 
 .header .show-menu li {
@@ -101,15 +123,18 @@ header a {
     width: 70px;
     height: 90px;
 }
-.socials{
+
+.socials {
     display: flex;
     margin: 0;
 }
-#top{
+
+#top {
     margin-top: -112px;
     top: 0;
     left: 0;
 }
+
 
 /*---------menu---------*/
 
@@ -120,14 +145,17 @@ header a {
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
 }
+
 .menu li a {
     text-transform: uppercase;
     font-size: 24px;
     letter-spacing: 0.1em;
 }
-.menu li{
+
+.menu li {
     margin-right: 40px;
 }
+
 .menu a {
     text-decoration: none;
     background-image: linear-gradient(currentColor, currentColor);
@@ -136,17 +164,17 @@ header a {
     background-size: 0% 2px;
     transition: background-size .3s;
 }
+
 .menu a:hover {
     background-size: 100% 2px;
 }
+
 .menu-open {
     background: none;
     border: none;
     margin-left: 20px;
     display: none
 }
-
-
 
 .soc {
     width: 30px;
@@ -155,12 +183,10 @@ header a {
     margin-left: 5px;
     border-radius: 20px;
 }
-.socials li{
+
+.socials li {
     margin-right: 0;
 }
-
-
-
 
 .offer p {
     font-family: 'gothic', serif;
@@ -170,6 +196,7 @@ header a {
     letter-spacing: 0.001em;
     margin-left: 15px;
 }
+
 .btn {
     margin: auto;
     display: inline-block;
@@ -186,66 +213,113 @@ header a {
     transition: all 0.5s ease;
     z-index: 1000;
 }
+
+
 /*.btn:hover {*/
+
+
 /*	background: black;*/
+
+
 /*	color: white;*/
+
+
 /*}*/
 
+
 /*---------------main---------------*/
-.title{
+
+.title {
     width: 100%;
     height: 100px;
     background-color: #e1e1e1;
+    margin-top: 0;
 }
-.title h1{
-    text-transform: uppercase; /*temporary*/
+
+.title h1 {
+    text-transform: uppercase;
+    /*temporary*/
     padding-top: 25px;
     text-align: center;
     font-size: 45px;
 }
-.container-main{
+
+.container-main {
     width: 1000px;
     margin: 70px auto 0;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-.col{
+
+.col {
     flex-direction: column;
     justify-content: center;
     width: 50%;
 }
-.image{
+
+.image {
     display: flex;
     flex-direction: row;
 }
-.item{
-    margin-top: -20px;
 
+.item_i {
+    margin-top: -20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
+
+.size {
+    display: flex;
+    flex-direction: row;
+}
+
+.size_item {
+    cursor: pointer;
+    user-select: none;
+    outline: none;
+    margin: 5px;
+    height: 35px;
+    width: 35px;
+    background: black;
+    color: white;
+    border: none;
+}
+
+.size_item:focus {
+    background: #ededed;
+    color: black;
+}
+
 .s-img {
     height: 90px;
     width: 90px;
 }
-.link-s-img{
+
+.link-s-img {
     cursor: pointer;
 }
-.img-ul{
+
+.img-ul {
     margin-top: 20px;
 }
-.features{
+
+.features {
     margin-top: 5px;
 }
 
-.s-title h1{
-    text-transform: uppercase; /*temporary*/
+.s-title h1 {
+    text-transform: uppercase;
+    /*temporary*/
     font-size: 40px;
 }
-.price h2{
+
+.price h2 {
     font-size: 30px;
     margin-bottom: 30px;
 }
-.ordering button{
+
+.ordering button {
     border: none;
     outline: none;
     width: 240px;
@@ -259,13 +333,16 @@ header a {
     margin-bottom: 40px;
     margin-top: 10px;
 }
-.text-description{
+
+.text-description {
     width: 75%;
 }
-.text-description h5{
+
+.text-description h5 {
     font-size: 25px;
     padding-bottom: 20px;
 }
+
 .text-description p {
     font-family: Raleway, serif;
     font-size: 16px;
@@ -273,26 +350,31 @@ header a {
     line-height: 26px;
     padding-bottom: 20px;
 }
-.text-description ul{
+
+.text-description ul {
     padding-left: 20px;
     padding-bottom: 30px;
-
 }
-.text-description li{
+
+.text-description li {
     font-size: 18px;
     font-weight: bold;
     list-style-type: disc;
 }
+
+
 /*  POPUP  */
-.popUp{
+
+.popUp {
     position: fixed;
     margin: auto;
-    top:calc(50% - 200px);
-    bottom:calc(50% - 200px);
-    left:calc(50% - 400px);
-    right:calc(50% - 400px);
+    top: calc(50% - 200px);
+    bottom: calc(50% - 200px);
+    left: calc(50% - 400px);
+    right: calc(50% - 400px);
 }
-.smoke{
+
+.smoke {
     position: absolute;
     right: 0;
     left: 0;
@@ -301,44 +383,54 @@ header a {
     background-color: black;
     opacity: .4;
 }
-.col-pop{
+
+.col-pop {
     background-color: #ffffff;
 }
-.img-title{
+
+.img-title {
     display: flex;
     margin-right: auto;
 }
-.block{
+
+.block {
     display: flex;
     flex-direction: row;
 }
-.bask-img{
+
+.bask-img {
     width: 253px;
     height: 323px;
     margin-right: 40px;
     margin-left: 40px;
 }
-.desc{
+
+.desc {
     margin-right: auto;
     display: flex;
     flex-direction: column;
 }
-.desc h4{
+
+.desc h4 {
     margin-top: 30px;
     font-size: 30px;
     margin-bottom: 10px;
 }
-.desc p{
+
+.desc p {
     font-size: 22px;
 }
-.buttons{
+
+.buttons {
     display: flex;
     flex-direction: column;
     width: 240px;
     margin: 0 auto;
     padding-bottom: 30px;
 }
-.continue, .toCart{
+
+.continue,
+.toCart {
     border: none;
     outline: none;
     width: 240px;
@@ -354,11 +446,11 @@ header a {
 .row {
     display: flex;
     margin-bottom: 10px;
-
 }
+
 .col-3,
 .col-2,
-.col-1  {
+.col-1 {
     position: relative;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -366,26 +458,31 @@ header a {
     display: inline-block;
     align-items: center;
 }
+
 .col-1 img,
 .col-2 img,
-.col-3 img{
+.col-3 img {
+    max-width: 95%;
     margin-bottom: 10px;
-    overflow:hidden;
+    overflow: hidden;
     -moz-transition: all 0.5s ease-out;
     -o-transition: all 0.5s ease-out;
     -webkit-transition: all 0.5s ease-out;
 }
+
 .col-1 img:hover,
 .col-2 img:hover,
-.col-3 img:hover{
+.col-3 img:hover {
     -webkit-transform: scale(1.07);
     -moz-transform: scale(1.07);
     -o-transform: scale(1.07);
 }
-.some:hover{
-    animation:product-hover .5s alternate;
+
+.some:hover {
+    animation: product-hover .5s alternate;
     opacity: .2;
 }
+
 .some {
     position: absolute;
     left: 0;
@@ -395,10 +492,11 @@ header a {
     height: 100%;
     width: 100%;
     opacity: 0;
-    background: rgb(0,0,0);
+    background: rgb(0, 0, 0);
     animation: product-unhover .5s;
 }
-.some a{
+
+.some a {
     position: absolute;
     left: 0;
     right: 0;
@@ -407,37 +505,51 @@ header a {
     height: 100%;
     width: 100%;
 }
+
 @keyframes product-hover {
-    from{
+    from {
         opacity: 0;
     }
-    to{
+    to {
         opacity: .2;
     }
 }
+
 @keyframes product-unhover {
-    from{
+    from {
         opacity: .2;
     }
-    to{
+    to {
         opacity: 0;
     }
 }
-.item {
+
+.item_i {
     display: block;
     max-width: 100%;
     margin: 0 auto;
+    /*margin-left: 10px;*/
+    margin-right: 10px;
 }
-.name{
+.item_i {
+    display: block;
+    max-width: 100%;
+    margin: 0 auto;
+    /*margin-left: 10px;*/
+    margin-right: 10px;
+}
+
+.name {
     margin-top: 15px;
 }
+
 .name,
 .price-new {
     display: block;
     text-align: center;
-
 }
-.basket{
+
+.basket {
     position: absolute;
     bottom: 15px;
     margin-left: 20px;
@@ -445,7 +557,7 @@ header a {
     height: 30px;
 }
 
-.num{
+.num {
     position: absolute;
     height: 20px;
     width: 20px;
@@ -455,27 +567,33 @@ header a {
     right: 0;
     top: 0;
 }
-.all-bask{
+
+.all-bask {
     position: relative;
     width: 60px;
     height: 55px;
 }
+
 .bask-cou {
     line-height: 20px;
     text-align: center;
 }
+
+
 /*------------footer------------*/
 
-.footer-text li a{
+.footer-text li a {
     text-transform: uppercase;
     font-size: 14px;
     letter-spacing: 0.1em;
 }
+
 .tel {
     font-size: 17px;
     margin-left: auto;
     letter-spacing: 0.1em;
 }
+
 .footer-text {
     font-size: 15px;
     font-family: 'Open Sans', sans-serif;
@@ -483,20 +601,25 @@ header a {
     margin-top: 80px;
     padding: 14px 0 50px
 }
+
 .footer-text p {
     margin-right: auto;
 }
-.footer{
+
+.footer {
     background-color: #ededed;
 }
-.faq{
+
+.faq {
     margin: 0 auto;
 }
-.shipping{
+
+.shipping {
     padding-bottom: 14px;
     font-size: 14px;
     text-align: center;
 }
+
 
 /*----------scrollTop----------*/
 
@@ -523,13 +646,16 @@ header a {
     -o-transform: scale(1);
     transform: scale(1);
 }
-.arrow{
+
+.arrow {
     max-width: 43px;
     max-height: 43px;
 }
+
 #idTop:hover {
     opacity: 1;
 }
+
 
 /*------------media------------*/
 
@@ -537,7 +663,7 @@ header a {
     .container {
         width: 1140px;
     }
-    .shipping{
+    .shipping {
         font-size: 14px;
     }
 }
@@ -546,13 +672,11 @@ header a {
     .container {
         width: 960px;
     }
-    .container-main{
+    .container-main {
         width: 940px;
     }
-    .item{
-        width: 75%;
-    }
-    .desc-left, .desc-right {
+    .desc-left,
+    .desc-right {
         width: 48%;
     }
     .gallery img:nth-child(1) {
@@ -567,32 +691,36 @@ header a {
 }
 
 @media screen and (max-width: 991px) {
-    body{
-        overflow-x:hidden;
+    body {
+        overflow-x: hidden;
     }
     .container {
         width: 720px;
     }
-    .container-main{
+    .container-main {
         width: 767px;
     }
     .white {
         height: 195px;
     }
-    .menu li a{
+    .menu li a {
         font-size: 18px;
     }
-    .r{
+    .r {
         margin-left: 100px;
     }
-    .item{
+    .item_i {
         width: 95%;
     }
-    .title h1{
-        font-size: 35px;
+    .item_i_b {
+        margin: 5px;
+        width: 95%;
     }
-
-    .img-ul{
+    .title h1 {
+        font-size: 35px;
+        padding-top: 34px;
+    }
+    .img-ul {
         margin-right: 10px;
     }
     .s-img {
@@ -602,10 +730,10 @@ header a {
     .text-description {
         width: 90%;
     }
-    .size-grid img{
+    .size-grid img {
         width: 90%;
     }
-    .logo{
+    .logo {
         width: 56px;
         height: 72px;
     }
@@ -613,97 +741,102 @@ header a {
         margin-right: 10px;
         margin-left: 10px;
     }
-    .banner{
+    .banner {
         margin-top: 90px;
     }
-    .col{
+    .col {
+
         flex-direction: column;
         justify-content: center;
         width: 40%;
     }
-    .bask-img{
+    .bask-img {
         width: 176px;
         height: 230px;
     }
-    .popUp{
-        top:calc(50% - 200px);
-        bottom:calc(50% - 200px);
-        left:calc(50% - 280px);
-        right:calc(50% - 280px);
+    .popUp {
+        top: calc(50% - 200px);
+        bottom: calc(50% - 200px);
+        left: calc(50% - 280px);
+        right: calc(50% - 280px);
     }
 }
 
 @media screen and (max-width: 767px) {
-    body{
-        overflow-x:hidden;
+    body {
+        overflow-x: hidden;
     }
-    .header{
+    .header {
         padding-top: 3px;
-        height: 75px;
+        height: 100px;
     }
-    .col{
+    .col {
+
         width: 90%;
     }
-    .image{
+    .image {
         width: 100%;
     }
-    .item{
+    .item_i {
         width: 90%;
         margin-left: 10px;
+        margin-left: 10px;
     }
-    .r{
+    .item_i_b {
+        width: 100%;
+        margin: 0 5px;
+    }
+    .r {
         margin-left: 30px;
         margin-right: 30px;
     }
-    .link-s-img img{
+    .link-s-img img {
         height: 130px;
         width: 130px;
     }
-    .title h1{
+    .title h1 {
         font-size: 30px;
     }
     .white {
-        height: 186px;
+        height: 208px;
     }
-
-    .ordering button{
-
+    .ordering button {
         width: 100%;
     }
-    .banner{
+    .banner {
         margin-top: 72px;
     }
     .container {
         width: 540px;
     }
-    .container-main{
+    .container-main {
         width: 95%;
     }
-    .lil{
+    .lil {
         display: none;
     }
-    .socials{
-        margin-right: auto ;
-        margin-left: 20px ;
+    .socials {
+        margin-right: auto;
+        margin-left: 20px;
     }
     .menu-open {
         display: block;
         margin-left: auto;
     }
-    .menu-open img{
+    .menu-open img {
         position: absolute;
         right: 30px;
         top: 30px;
         height: 40px;
     }
-    .menu{
+    .menu {
         margin: 0;
         width: 0;
         height: 0;
     }
     .menu-open {
         top: 0;
-        right:  0;
+        right: 0;
         width: 40px;
         height: 40px;
     }
@@ -718,14 +851,13 @@ header a {
     .description {
         flex-wrap: wrap;
     }
-    .desc-left, .desc-right {
+    .desc-left,
+    .desc-right {
         width: 100%;
     }
     .desc-left {
         margin-bottom: 40px;
     }
-
-
     .gallery img:nth-child(1),
     .gallery img:nth-child(2),
     .gallery img:nth-child(3) {
@@ -744,17 +876,18 @@ header a {
     .logo {
         margin-bottom: 20px;
     }
-    .col-2, .col-3{
+    .col-2,
+    .col-3 {
         flex: 0 0 50%;
     }
-    .col-1{
+    .col-1 {
         display: none;
     }
-    .show-menu{
+    .show-menu {
         display: block;
         height: 220px;
     }
-    .show-lil{
+    .show-lil {
         display: flex;
     }
     /*button{*/
@@ -766,42 +899,53 @@ header a {
     /*	float: left;*/
     /*	margin-top: 15px;*/
     /*}*/
-    .shipping{
+    .shipping {
         text-align: left;
     }
-    .all-bask{
+    .all-bask {
         margin-right: 470px;
     }
 }
 
 @media screen and (max-width: 575px) {
-    body{
-        overflow-x:hidden;
+    body {
+        overflow-x: hidden;
     }
-    .image{
+    .image {
         width: 100%;
     }
-    .item{
+    .row{
+        margin: 0 auto;
+    }
+    .item_i {
         width: 70%;
         height: 70%;
         margin-left: 10px;
+    }
+    .item_i_b {
+        margin: 0 5px;
+        width: 100%;
     }
     .link-s-img img {
         width: 100px;
         height: 100px;
     }
-    .s-title h1{
-        text-transform: uppercase; /*temporary*/
+    .title h1 {
+        padding-top: 20px;
+    }
+    .s-title h1 {
+        text-transform: uppercase;
+        /*temporary*/
         font-size: 30px;
     }
-    .r{
+    .r {
         margin-left: 30px;
     }
     .container {
         width: 100%;
         padding: 0 15px;
     }
-    .container-main{
+    .container-main {
         width: 100%;
     }
     .offer h1 {
@@ -820,51 +964,64 @@ header a {
     .logo {
         margin-bottom: 20px;
     }
-    .col-1{
+    .col-1 {
         display: none;
     }
-    .btn{
+    .col-2{
+        display: none;
+    }
+    .col-3{
+        flex: 0 0 100%;
+
+    }
+    .btn {
         margin: 0 auto;
     }
     .offer p {
         margin-left: 0;
         text-align: center;
     }
-    .footer-text{
+    .footer-text {
         padding-bottom: 14px;
         margin: 40px auto 0 auto;
         max-width: 200px;
         text-align: center;
     }
-    .footer-text p{
+    .footer-text p {
         margin: 0 auto;
         padding-right: 10px;
     }
     .footer-text p:nth-child(1) {
         margin-bottom: 5px;
     }
-    .footer-text a{
+    .footer-text a {
         margin: 0 auto;
         margin-bottom: 5px;
         padding-left: 10px;
     }
-    .shipping{
+    .col-1 img,
+    .col-2 img,
+    .col-3 img {
+        max-width: 105%;
+    }
+    .shipping {
         display: none;
     }
-    .img-title{
+    .img-title {
         flex-direction: column;
         margin: 0 auto;
         padding: 0 10px;
     }
-    .bask-img{
+    .bask-img {
         margin: 0 auto;
         width: 281px;
         height: 350px;
     }
-    .buttons{
+    .buttons {
         width: 95%;
     }
-    .continue, .toCart{
+    .continue,
+    .toCart {
         width: 100%;
     }
     .desc h4 {
@@ -873,37 +1030,42 @@ header a {
     .desc p {
         margin-bottom: 20px;
     }
-    .s{
+    .s {
         margin: auto;
     }
-    .popUp{
-        top:90px;
-        bottom:0;
-        left:0;
-        right:0;
+    .popUp {
+        top: 90px;
+        bottom: 0;
+        left: 0;
+        right: 0;
     }
-    .all-bask{
+    .all-bask {
         margin-right: 80px;
     }
-
 }
+
 @media screen and (max-width: 425px) {
-    .image{
+    .image {
         width: 100%;
     }
-    .item{
-        width: 70%;
+    .item_i {
+        width: 70% !important;
         height: 70%;
         margin-left: 10px;
+    }
+    .item_i_b {
+        width: 100% !important;
+        margin: 0;
     }
     .link-s-img img {
         width: 70px;
         height: 70px;
     }
-    .title h1{
+    .title h1 {
         font-size: 23px;
+        padding-top: 26px;
     }
-    .s{
+    .s {
         margin: auto;
     }
 }
