--- a/css/item.css
+++ b/css/item.css
@@ -900,7 +900,7 @@ header a {
     /*	margin-top: 15px;*/
     /*}*/
     .shipping {
-        text-align: left;
+        text-align: center !important;
     }
     .all-bask {
         margin-right: 470px;
@@ -997,7 +997,7 @@ header a {
     .footer-text a {
         margin: 0 auto;
         margin-bottom: 5px;
-        padding-left: 10px;
+        padding-left: 00px;
     }
     .col-1 img,
     .col-2 img,
