--- a/css/products.css
+++ b/css/products.css
@@ -648,7 +648,7 @@ header a {
         margin-top: 15px;
     }
     .shipping {
-        text-align: left;
+        text-align: center !important;
     }
     .title p {
         font-size: 20px;
@@ -732,7 +732,7 @@ header a {
     .footer-text a {
         margin: 0 auto;
         margin-bottom: 5px;
-        padding-left: 10px;
+        padding-left: 0px;
     }
     .shipping {
         display: none;
